@@ -1,3 +1,8 @@
+2000-06-01  Dieter Baron  <dillo@danbala.tuwien.ac.at>
+
+	* sockets.c (sopen): use inet_aton to convert dotted quad
+	notation to address.
+
 2000-05-18  Dieter Baron  <dillo@danbala.tuwien.ac.at>
 
 	* ftp.c (ftp_cat): correct transfer rate display when start != 0.
